src/test/ui/issues/issue-45829/import-self.stderr
error: expected identifier, found keyword `self`
  --> $DIR/import-self.rs:18:12
   |
LL | use foo as self;
   |            ^^^^ expected identifier, found keyword

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/import-self.rs:20:5
   |
LL | use foo::self;
   |     ^^^^^^^^^

error[E0255]: the name `foo` is defined multiple times
  --> $DIR/import-self.rs:16:11
   |
LL | mod foo {
   | ------- previous definition of the module `foo` here
...
LL | use foo::{self};
   |           ^^^^ `foo` reimported here
   |
   = note: `foo` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | use foo::{self as other_foo};
   |           ^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors occurred: E0255, E0429.
For more information about an error, try `rustc --explain E0255`.
